--- a/ch02/ch02-hitcount-website/Dockerfile
+++ b/ch02/ch02-hitcount-website/Dockerfile
@@ -1,14 +1,13 @@
 # escape=`
-FROM microsoft/dotnet:1.1.2-sdk-nanoserver AS builder
+FROM microsoft/dotnet:1.1-sdk-nanoserver AS builder
 
 WORKDIR C:\src
 COPY src .
 
-RUN dotnet restore; `
-    dotnet publish
-
+RUN dotnet restore; dotnet publish
+    
 # app image
-FROM microsoft/aspnetcore:1.1.2-nanoserver
+FROM microsoft/aspnetcore:1.1-nanoserver
 
 WORKDIR C:\dotnetapp
 RUN New-Item -Type Directory -Path .\app-state
